<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/groceries"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <Button
        android:id="@+id/groceries"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#5C00C853"
        android:text="@string/groceries"
        app:layout_constraintEnd_toEndOf="@+id/allTasks"
        app:layout_constraintTop_toBottomOf="@+id/homework" />

    <Button
        android:id="@+id/doLaundry"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="148dp"
        android:background="#5C00C853"
        android:text="@string/laundry"
        app:layout_constraintEnd_toEndOf="@+id/homework"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/homework"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#5C00C853"
        android:text="@string/homework"
        app:layout_constraintEnd_toEndOf="@+id/groceries"
        app:layout_constraintTop_toBottomOf="@+id/doLaundry" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#03A9F4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="TaskMaster"
        app:subtitleTextColor="#FFFFFF" />

    <Button
        android:id="@+id/allTasks"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="44dp"
        android:background="#00BCD4"
        android:text="@string/all_tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addTask"
        app:layout_constraintTop_toTopOf="@+id/addTask" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"
        android:background="#00BCD4"
        android:text="@string/add_task"
        app:layout_constraintEnd_toStartOf="@+id/allTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceries" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/homework"
        app:layout_constraintStart_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/doLaundry"
        app:layout_constraintStart_toStartOf="@+id/checkBox6"
        app:layout_constraintTop_toTopOf="@+id/doLaundry" />


</androidx.constraintlayout.widget.ConstraintLayout>